crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_clickbench_q41_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q41"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                   |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Limit: skip=100, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |   Sort: PageViews DESC NULLS FIRST, fetch=110                                                                                                                                                                                                                                                                                                                                                                                          |
|               |     Projection: hits.URLHash, to_timestamp(hits.EventDate * Int64(86400)), count(Int64(1)) AS PageViews                                                                                                                                                                                                                                                                                                                                |
|               |       Aggregate: groupBy=[[hits.URLHash, to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400))]], aggr=[[count(Int64(1))]]                                                                                                                                                                                                                                                                                                        |
|               |         Projection: hits.EventDate, hits.URLHash                                                                                                                                                                                                                                                                                                                                                                                       |
|               |           Filter: (hits.TraficSourceID = Int16(-1) OR hits.TraficSourceID = Int16(6)) AND hits.CounterID = Int32(62) AND hits.IsRefresh = Int16(0) AND hits.RefererHash = Int64(3594120000172545465) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) >= TimestampNanosecond(1372636800000000000, None) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) <= TimestampNanosecond(1375228800000000000, None) |
|               |             TableScan: hits projection=[EventDate, CounterID, IsRefresh, TraficSourceID, RefererHash, URLHash]                                                                                                                                                                                                                                                                                                                         |
| physical_plan | GlobalLimitExec: skip=100, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |   SortPreservingMergeExec: [PageViews@2 DESC], fetch=110                                                                                                                                                                                                                                                                                                                                                                               |
|               |     ProjectionExec: expr=[URLHash@0 as URLHash, to_timestamp(hits.EventDate * Int64(86400))@1 as to_timestamp(hits.EventDate * Int64(86400)), count(Int64(1))@2 as PageViews]                                                                                                                                                                                                                                                          |
|               |       SortExec: TopK(fetch=110), expr=[count(Int64(1))@2 DESC], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                           |
|               |         AggregateExec: mode=FinalPartitioned, gby=[URLHash@0 as URLHash, to_timestamp(hits.EventDate * Int64(86400))@1 as to_timestamp(hits.EventDate * Int64(86400))], aggr=[count(Int64(1))]                                                                                                                                                                                                                                         |
|               |           RepartitionExec: partitioning=Hash([URLHash@0, to_timestamp(hits.EventDate * Int64(86400))@1], 16), input_partitions=16                                                                                                                                                                                                                                                                                                      |
|               |             AggregateExec: mode=Partial, gby=[URLHash@1 as URLHash, to_timestamp(CAST(EventDate@0 AS Int64) * 86400) as to_timestamp(hits.EventDate * Int64(86400))], aggr=[count(Int64(1))]                                                                                                                                                                                                                                           |
|               |               FilterExec: (TraficSourceID@3 = -1 OR TraficSourceID@3 = 6) AND CounterID@1 = 62 AND IsRefresh@2 = 0 AND RefererHash@4 = 3594120000172545465 AND to_timestamp(CAST(EventDate@0 AS Int64) * 86400) >= 1372636800000000000 AND to_timestamp(CAST(EventDate@0 AS Int64) * 86400) <= 1375228800000000000, projection=[EventDate@0, URLHash@5]                                                                                |
|               |                 SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                   |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                                                                                                                                                                                                                                        |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
