crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_clickbench_q42_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q42"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                         |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Limit: skip=10000, fetch=10                                                                                                                                                                                                                                                                                                                                                                  |
|               |   Sort: PageViews DESC NULLS FIRST, fetch=10010                                                                                                                                                                                                                                                                                                                                              |
|               |     Projection: hits.WindowClientWidth, hits.WindowClientHeight, count(Int64(1)) AS PageViews                                                                                                                                                                                                                                                                                                |
|               |       Aggregate: groupBy=[[hits.WindowClientWidth, hits.WindowClientHeight]], aggr=[[count(Int64(1))]]                                                                                                                                                                                                                                                                                       |
|               |         Projection: hits.WindowClientWidth, hits.WindowClientHeight                                                                                                                                                                                                                                                                                                                          |
|               |           Filter: hits.CounterID = Int32(62) AND hits.DontCountHits = Int16(0) AND hits.IsRefresh = Int16(0) AND hits.URLHash = Int64(2868770270353813622) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) >= TimestampNanosecond(1372636800000000000, None) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) <= TimestampNanosecond(1375228800000000000, None) |
|               |             TableScan: hits projection=[EventDate, CounterID, IsRefresh, WindowClientWidth, WindowClientHeight, DontCountHits, URLHash]                                                                                                                                                                                                                                                      |
| physical_plan | GlobalLimitExec: skip=10000, fetch=10                                                                                                                                                                                                                                                                                                                                                        |
|               |   SortPreservingMergeExec: [PageViews@2 DESC], fetch=10010                                                                                                                                                                                                                                                                                                                                   |
|               |     ProjectionExec: expr=[WindowClientWidth@0 as WindowClientWidth, WindowClientHeight@1 as WindowClientHeight, count(Int64(1))@2 as PageViews]                                                                                                                                                                                                                                              |
|               |       SortExec: TopK(fetch=10010), expr=[count(Int64(1))@2 DESC], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                               |
|               |         AggregateExec: mode=FinalPartitioned, gby=[WindowClientWidth@0 as WindowClientWidth, WindowClientHeight@1 as WindowClientHeight], aggr=[count(Int64(1))]                                                                                                                                                                                                                             |
|               |           RepartitionExec: partitioning=Hash([WindowClientWidth@0, WindowClientHeight@1], 16), input_partitions=16                                                                                                                                                                                                                                                                           |
|               |             AggregateExec: mode=Partial, gby=[WindowClientWidth@0 as WindowClientWidth, WindowClientHeight@1 as WindowClientHeight], aggr=[count(Int64(1))]                                                                                                                                                                                                                                  |
|               |               FilterExec: CounterID@1 = 62 AND DontCountHits@5 = 0 AND IsRefresh@2 = 0 AND URLHash@6 = 2868770270353813622 AND to_timestamp(CAST(EventDate@0 AS Int64) * 86400) >= 1372636800000000000 AND to_timestamp(CAST(EventDate@0 AS Int64) * 86400) <= 1375228800000000000, projection=[WindowClientWidth@3, WindowClientHeight@4]                                                   |
|               |                 SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                           |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                         |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                                                                                                                                                                                              |
|               |                                                                                                                                                                                                                                                                                                                                                                                              |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
